--- a/src/static/css/common.css
+++ b/src/static/css/common.css
@@ -268,7 +268,9 @@ a {
     left: -0.125em;
     width: calc(100% + 0.25em);
     height: calc(100% + 0.25em);
-    background: linear-gradient(35deg, rgba(255,255,255,0.5) 100%, rgba(250,250,250,0) 100%);
+    background: linear-gradient(to right, rgba(255, 255, 255, 0.5) 50%, rgba(250, 250, 250, 0) 50%);
+    background-size: 200% 100%;
+    background-position: 100% 0;
     border-radius: 10px;
     z-index: 3;
 }
