--- a/src/static/css/common.css
+++ b/src/static/css/common.css
@@ -227,16 +227,29 @@ a {
     text-decoration: underline;
 }
 
-.notification {
-    opacity: 0;
+.notification-container {
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+    gap: 1em;
     top: 1em;
     right: 1em;
-    display: flex;
-    flex-direction: row;
+    z-index: 10;
+    width: calc(100% - 2em);
+    height: calc(100% - 2em);
 }
 
-.notification > #notification-body {
+.notification {
+    opacity: 0;
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+    height: fit-content;
+}
+
+.notification > .notification-body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -268,9 +281,9 @@ a {
     left: -0.125em;
     width: calc(100% + 0.25em);
     height: calc(100% + 0.25em);
-    background: linear-gradient(to right, rgba(255, 255, 255, 0.5) 50%, rgba(250, 250, 250, 0) 50%);
+    background: linear-gradient(to right, rgba(255,255,255,0.5) 50%, rgba(250,250,250,0) 50%);
     background-size: 200% 100%;
-    background-position: 100% 0;
+    background-position: 0% 0;
     border-radius: 10px;
     z-index: 3;
 }
